tweaks so I can build my mod using Forge's goddamned annoying build system
Some of the unit tests are temporarily disabled too. The new code is not backwards compatible with the old persistence strings